# openshell

./: .gitignore  CHANGELOG.md  Cargo.toml  README.en.md  README.md  build.rs
assets/: openshell.desktop
rdp_shim/: shim.c
src/: app.rs  config.rs  i18n.rs  main.rs  rdp.rs  rdp_ffi.rs  sftp.rs
ui/: app.slint  rdp_view.slint  session_dialog.slint  sidebar.slint  tabs.slint  terminal_view.slint  theme.slint  welcome.slint
