[package]
name = "openshell"
version = "0.2.2"
edition = "2021"
authors = ["openshell contributors"]
description = "A lightweight FinalShell-style SSH/terminal client written in Rust + Slint"
license = "MIT OR Apache-2.0"
repository = "https://github.com/your/openshell"
readme = "README.md"
rust-version = "1.75"

[features]
default = []
rdp = []

[dependencies]
slint = { version = "~1.8", features = ["compat-1-2"] }
# Direct access to the winit window/events (OS file-drop for drag-and-drop upload).
i-slint-backend-winit = "~1.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
thiserror = "1"
directories = "5"
chrono = { version = "0.4", features = ["serde"] }
sysinfo = "0.33"
uuid = { version = "1", features = ["v4", "serde"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "io-util", "net", "time", "fs"] }
russh = "0.49"
russh-keys = "0.49"
ssh-key = "0.6"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
rand = "0.8"
async-trait = "0.1"
futures = "0.3"
vt100 = "0.15"
russh-sftp = "2"
rfd = "0.15"
arboard = "3"
# Zeroes password buffers on drop so plaintext credentials don't linger in
# freed heap memory (core dumps / debuggers / /proc/pid/mem).
zeroize = "1"
libc = "0.2"
keyring = "2"

[build-dependencies]
slint-build = "1.8"
# RDP support via FreeRDP FFI. The C shim (rdp_shim/shim.c) is compiled by build.rs.
# Requires libfreerdp3-dev (Linux), freerdp (brew on macOS), or vcpkg install freerdp (Windows).
cc = "1"
pkg-config = "0.3"

# Embeds assets/openshell.ico into the .exe so Explorer / taskbar / shortcuts
# show the app icon. Windows-only; ignored on other targets.
[target.'cfg(windows)'.build-dependencies]
winresource = "0.1"

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
strip = "symbols"
panic = "abort"

[profile.dev]
opt-level = 1

